--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,11 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"dev": "concurrently \"npx tsc -w\" \"nodemon --exec  ts-node src/index.ts\""
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"seed": "ts-node prisma/seed.ts",
+		"build": "rimraf dist && npx tsc",
+		"start": "npm run build && node dist/src/index.js",
+		"dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec  ts-node src/index.ts\""
 	},
 	"keywords": [],
 	"author": "",
