--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "./src/index.ts",
+			"src": "/server/src/index.ts",
 			"use": "@vercel/node"
 		}
 	],
 	"routes": [
 		{
-			"src": "./src/(.*)",
-			"dest": "/server"
+			"src": "/(.*)",
+			"dest": "/server/src/index.ts"
 		}
 	]
 }
