--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "src/index.ts",
+			"src": "dist/src/index.js",
 			"use": "@vercel/node"
 		}
 	],
 	"routes": [
 		{
-			"src": "src/(.*)",
-			"dest": "/"
+			"src": "/(.*)",
+			"dest": "dist/src/index.js"
 		}
 	]
 }
