--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"seed": "ts-node prisma/seed.ts",
 		"build": "rimraf dist && npx tsc",
-		"start": "npm run build && node dist/src/index.js"
+		"start": "node dist/src/index.js"
 	},
 	"keywords": [],
 	"author": "",
