--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"seed": "ts-node prisma/seed.ts",
-		"build": "rimraf dist && npx tsc",
-		"start": "node dist/src/index.js"
+		"build": "rimraf dist && tsc && prisma generate",
+		"start": "npm run build && node dist/src/index.js"
 	},
 	"keywords": [],
 	"author": "",
