--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
 	"main": "index.js",
 	"scripts": {
 		"postinstall": "prisma generate",
-		"start": "nodemon src/index.ts"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "rimraf dist && npx tsc",
+		"start": "npm run build && node dist/src/index.js"
 	},
 	"keywords": [],
 	"author": "",
